# uvbox

./: .gitignore  .goreleaser.yaml  Containerfile  HOWTOUSE.md  README.md  hk.pkl  mise.toml
.github/workflows/: ci.yml  release.yml
box/: box.go  box_package.go  box_package_git.go  box_package_git_test.go  box_package_test.go  box_run.go  box_run_test.go  box_setup.go  box_setup_configuration_test.go  box_setup_package_test.go  box_setup_uv_test.go  box_test.go  config.go  config_identifier_test.go  generate.go  go.mod  go.sum  hidden_cli.go  main.go
boxer/: config.go  config_test.go  generate.go  git.go  git_test.go  go.mod  go.sum  logger.go  main.go  main_test.go
examples/git/: simple-app.toml
examples/pypi/: custom-certs.toml  custom-registry.toml  optional-dependency.toml  simple-app.toml
pypi/uvbox/: build_wheels.py  hatch_build.py  pyproject.toml  sbom.py  utils.py
scripts/: e2e.py
